# 3DViewer_V1.0

./: LICENSE  README.md
src/: Doxyfile  Makefile
src/3D_Viewer/: CMakeLists.txt  main.cpp
src/3D_Viewer/back/: s21_3dviewer.c  s21_3dviewer.h  s21_affine.c
src/3D_Viewer/front/OpenGL/: glwidget.cpp  glwidget.h  style.cpp  transforamation.cpp
src/3D_Viewer/front/ViewerWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  styleWindow.cpp  transformationWindow.cpp
src/Tests/: s21_3dviewer_tests.c  s21_3dviewer_tests.h  s21_common_tests.c
